<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GuessNumber</string>
    <string name="etPlayerHint">Introduce tu nombre</string>
    <string name="btJugarText">¡A jugar!</string>
    <string name="etIntentosHint">Introduce el número de intentos</string>
    <string name="txTitulo">Adivina el número</string>
    <string name="tvIntroTexto">Introduce el número:</string>
    <string name="btnProbarText">Probar</string>
    <string name="aboutus">Sobre nosotros...</string>

    <string name="AboutUsName" translatable="false">Ciro León Espinosa Avilés</string>
    <string name="AboutUsSubTiTle">Estudiante</string>
    <string name="AboutUsBrief" translatable="false">cironidas@gmail.com</string>
    <string name="AboutUsGithub" translatable="false">https://github.com/Cirglorfin</string>
    <string name="End1EJ">"El jugador "</string>
    <string name="End1NHHEN">no ha hacertado el número (</string>
    <string name="End1APDHT">) a pesar de haber tenido</string>
    <string name="End1I">intento</string>
    <string name="End2HHEN">ha hacertado el número</string>
    <string name="End2E">en</string>
    <string name="Play1NIM">El número introducido es menor</string>
    <string name="Play2ENIEM">El número introducido es mayor</string>
    <string name="PlayIN">Introduce un número</string>
    <string name="btnVolverText">Nuevo juego</string>
    <string name="Config" translatable="false">Guess Number</string>
    <string name="Play" translatable="false">Guess Number</string>
    <string name="End" translatable="false">Guess Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PlayStoreLink">8002078663318221363</string>
</resources>