<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/configFragment">
    <fragment
        android:id="@+id/configFragment"
        android:name="com.example.guessnumbernavigation.iu.ConfigFragment"
        android:label="@string/Config"
        tools:layout="@layout/fragment_config" >
        <action
            android:id="@+id/action_configFragment_to_playFragment"
            app:destination="@id/playFragment" />
        <action
            android:id="@+id/action_configFragment_to_aboutUsFragment"
            app:destination="@id/aboutUsFragment" />
    </fragment>
    <fragment
        android:id="@+id/playFragment"
        android:name="com.example.guessnumbernavigation.iu.PlayFragment"
        android:label="@string/Play"
        tools:layout="@layout/fragment_play" >
        <action
            android:id="@+id/action_playFragment_to_endPlayFragment"
            app:destination="@id/endPlayFragment"
            app:popUpTo="@id/configFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/endPlayFragment"
        android:name="com.example.guessnumbernavigation.iu.EndPlayFragment"
        android:label="@string/End"
        tools:layout="@layout/fragment_end_play" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.guessnumbernavigation.iu.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="com.example.guessnumbernavigation.iu.AboutUsFragment"
        android:label="fragment_about_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>